--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       window.process = process;
     </script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/CGenie.ico" />
+    <link rel="icon" type="image/svg+xml" href="/cgenie.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
