--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <script type="module">
-      import { Buffer } from "buffer";
-      import process from "process";
+      import { Buffer } from 'buffer';
+      import process from 'process';
       window.Buffer = Buffer;
       window.process = process;
     </script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/cgenie.ico" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Credential Genie</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
