Implemented Create and Verify Pages

--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="At Credential Genie, we believe in empowering individuals and organizations with the revolutionary potential of verifiable credentials."
+    />
+    <meta name="keywords" content="Credential Genie, Credential, Genie" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="" />
+    <meta property="og:title" content="Credential Genie" />
+    <meta
+      property="og:description"
+      content="At Credential Genie, we believe in empowering individuals and organizations with the revolutionary potential of verifiable credentials."
+    />
+    <meta property="og:image" content="logo.svg" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="" />
+    <meta property="twitter:title" content="Credential Genie" />
+    <meta
+      property="twitter:description"
+      content="At Credential Genie, we believe in empowering individuals and organizations with the revolutionary potential of verifiable credentials."
+    />
+    <meta property="twitter:image" content="logo.svg" />
+
+    <meta property="og:site_name" content="" />
+    <meta property="og:site" content="" />
+    <meta property="og:title" content="Credential Genie" />
+    <meta
+      property="og:description"
+      content="At Credential Genie, we believe in empowering individuals and organizations with the revolutionary potential of verifiable credentials."
+    />
+    <meta property="og:image" content="logo.svg" />
+    <meta property="og:url" content="" />
+    <title>Credential Genie</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
     <script type="module">
       import { Buffer } from 'buffer';
       import process from 'process';
       window.Buffer = Buffer;
       window.process = process;
     </script>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Credential Genie</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div id="root"></div>
