--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
       window.Buffer = Buffer;
       window.process = process;
     </script>
+    <!-- /logo.svg -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Credential Genie</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
